--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.uiexample"
+        applicationId "com.example.uiexample.demo"
         minSdk 21
         targetSdk 32
         versionCode 1
@@ -34,6 +34,7 @@ android {
 dependencies {
 
     implementation project(":uiexample")
+    implementation project(":juiexample")
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
