--- a/settings.gradle
+++ b/settings.gradle
@@ -14,5 +14,6 @@ dependencyResolutionManagement {
 }
 rootProject.name = "UIExample"
 include ':app'
+include ':common'
 include ':uiexample'
 include ':juiexample'
