--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,9 +35,10 @@ dependencies {
 
     implementation project(":uiexample")
     implementation project(":juiexample")
+    implementation project(":common")
+    implementation project(":bugs")
 
     debugImplementation 'com.squareup.leakcanary:leakcanary-android:2.7'
-
 
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
