--- a/tetris/build.gradle
+++ b/tetris/build.gradle
@@ -28,6 +28,8 @@ android {
 
 dependencies {
     implementation project(":juiexample")
+    implementation project(":common")
+
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.6.1'
