--- a/settings.gradle
+++ b/settings.gradle
@@ -12,7 +12,7 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "UIExample"
+rootProject.name = "xexample"
 include ':app'
 include ':tetris'
 include ':common'
