--- a/settings.gradle
+++ b/settings.gradle
@@ -14,6 +14,7 @@ dependencyResolutionManagement {
 }
 rootProject.name = "xexample"
 include ':app'
+include ':empty'
 include ':tetris'
 include ':common'
 include ':xlog'
