--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ android {
 }
 
 dependencies {
+    implementation project(":asm")
     implementation project(":tetris")
     implementation project(":uiexample")
     implementation project(":juiexample")
