--- a/juiexample/build.gradle
+++ b/juiexample/build.gradle
@@ -28,6 +28,6 @@ dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
     api 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
+    api 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
 }
