--- a/bugs/src/main/AndroidManifest.xml
+++ b/bugs/src/main/AndroidManifest.xml
@@ -2,4 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.bugs">
+
+    <application>
+        <activity android:name=".BugsActivity">
+        </activity>
+    </application>
 </manifest>
