--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ android {
 dependencies {
     implementation project(":asm")
     implementation project(":tetris")
+    implementation project(":retro-snaker")
     implementation project(":uiexample")
     implementation project(":juiexample")
     implementation project(":common")
