--- a/game/game-config.gradle
+++ b/game/game-config.gradle
@@ -1,2 +1,5 @@
 include ':tetris'
 project(":tetris").projectDir = new File("./game/tetris")
+
+include ':retro-snaker'
+project(":retro-snaker").projectDir = new File("./game/retro-snaker")
