【game】增加游戏模块：羊了个羊

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation project(":asm")
     implementation project(":tetris")
     implementation project(":retro-snaker")
+    implementation project(":sheep")
     implementation project(":uiexample")
     implementation project(":juiexample")
     implementation project(":common")
